--- a/assets/style.css
+++ b/assets/style.css
@@ -1,4 +1,108 @@
 body {
   background: black;
+  opacity: 0.5;
   color: white;
+  font-family: monospace;
+  transition: 0.5s;
+  font-size: 16px;
+}
+#title {
+  position: absolute;
+  left: 0;
+  top: 10%;
+  width: 100%;
+  font-weight: bolder;
+  font-size: 48px;
+  text-align: center;
+}
+#subtitle {
+  color: #aaa;
+  font-size: 24px;
+  font-weight: bold;
+}
+#login {
+  position: absolute;
+  top: 30%;
+  height: 30%;
+  left: 35%;
+  width: 30%;
+  background: #022;
+  text-align: center;
+  padding: 10px;
+  border-radius: 15px;
+  transition: 0.3s;
+}
+.login-input {
+  padding: 10px;
+  border-radius: 10px;
+  width: 80%;
+  background: #122;
+  color: white;
+  border: 1px solid teal;
+  transition: 0.3s;
+  font-size: 16px;
+  margin-bottom: 5px;
+}
+.login-input:focus {
+  background: #244;
+  outline: none;
+}
+button {
+  cursor: pointer;
+}
+.btnthingy {
+  padding: 10px;
+  border-radius: 10px;
+  width: 50%;
+  background: teal;
+  color: white;
+  border: none;
+  transition: 0.3s;
+  font-size: 16px;
+  cursor: pointer;
+}
+.btnthingy:disabled {
+  background: #244;
+  color: #777;
+  cursor: not-allowed;
+}
+#login-userinfo {
+  color: #aaa;
+  margin-bottom: 20px;
+}
+#login-passinfo {
+  color: #aaa;
+  margin-bottom: 20px;
+}
+#activeuser {
+  margin-bottom: 10px;
+}
+#noclicky {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  cursor: progress;
+  z-index: 10000000;
+}
+#onlineusers {
+  position: absolute;
+  right: 40px;
+  top: 40px;
+  background: #0003;
+  border-radius: 15px;
+  padding: 10px;
+  width: 20%;
+  height: 40%;
+}
+.online-user {
+  background: teal;
+  padding: 5px;
+  border-radius: 10px;
+  margin-bottom: 3px;
+  margin-top: 3px;
+}
+.online-active {
+  background: #a2a;
 }
