--- a/assets/style.css
+++ b/assets/style.css
@@ -1,10 +1,22 @@
 body {
   background: black;
-  opacity: 0.5;
   color: white;
   font-family: monospace;
-  transition: 0.5s;
   font-size: 16px;
+}
+.window {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  transition: 0.5s;
+}
+#window-core {
+  background: #011;
+}
+#window-deckeditor {
+  background: #101;
 }
 #title {
   position: absolute;
@@ -23,7 +35,6 @@ body {
 #login {
   position: absolute;
   top: 30%;
-  height: 30%;
   left: 35%;
   width: 30%;
   background: #022;
@@ -74,7 +85,7 @@ button {
   color: #aaa;
   margin-bottom: 20px;
 }
-#activeuser {
+#activeuser, #yourdecksheader {
   margin-bottom: 10px;
 }
 #noclicky {
@@ -105,4 +116,95 @@ button {
 }
 .online-active {
   background: #a2a;
+}
+.cardarea {
+  background: #0005;
+  border-radius: 15px;
+  margin: 20px;
+  padding: 10px;
+  width: calc(80% - 100px);
+  height: 30%;
+}
+#editorarea { /* to make it look nicer */
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: calc(100% - 60px);
+  height: calc(100% - 60px);
+  padding: 30px;
+}
+.suwicard {
+  display: inline-block;
+  border: 1px solid white;
+  border-radius: 15px;
+  padding: 5px;
+  width: 80px;
+  height: 80px;
+  background: black;
+  font-size: 11px;
+  cursor: pointer;
+}
+.suwicard.unavailable {
+  border: 1px solid gray;
+  color: #aaa;
+  opacity: 0.7;
+  cursor: not-allowed;
+}
+.suwiimage {
+  position: absolute;
+  width: 80px;
+  height: 80px;
+  opacity: 0.8;
+}
+.suwititle {
+  position: absolute;
+  width: 80px;
+  height: 80px;
+  user-select: none;
+}
+#deckname {
+  width: calc(80% - 100px);
+}
+.derst { /* deck editor right side thing */
+  position: absolute;
+  right: 20px;
+  width: 20%;
+}
+#savedeck {
+  top: 30px;
+}
+#savedeck-info {
+  top: 80px;
+  color: #aaa;
+  text-align: center;
+}
+#copydeck {
+  top: 140px;
+}
+#copydeck-info {
+  top: 190px;
+  color: #aaa;
+  text-align: center;
+}
+#discarddeck {
+  top: 240px;
+  color: red;
+  background: #424;
+}
+#decklist {
+  text-align: center;
+}
+.decklist-item {
+  padding: 10px;
+  border-radius: 10px;
+  margin-bottom: 10px;
+  color: white;
+  font-size: 16px;
+  background: black;
+  border: 1px solid white;
+  cursor: pointer;
+}
+#deckimporter {
+  width: 80%;
+  margin-top: 10px;
 }
